--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </tbody>
         </table>
         <script>
-            window.addMobileWarning();
+            window.addMobileWarning(true);
         </script>
     </body>
 </html>
