Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   404.html
	new file:   "assets/wiki/\345\226\256\345\255\227/\360\254\202\244-md/\360\254\202\264\345\255\227\345\275\242\347\257\206\346\233\270\346\230\245\347\247\213\347\237\263\351\274\223\346\226\2070.png"
	deleted:    css/404.css
	deleted:    "css/\346\210\221\347\232\204\345\234\226\345\206\212.css"
	deleted:    "css/\346\227\245\350\252\214.css"
	renamed:    "css/\346\273\276\345\213\225\346\242\235/\351\273\221\347\201\260\347\231\275\346\273\276\345\213\225\346\242\235.css" -> "css/\346\273\276\345\213\225\346\242\235/\346\226\271\346\273\276\345\213\225\346\242\235.css"
	deleted:    "css/\350\210\212wiki.css"
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   index.html
	modified:   "json/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227\350\276\255\345\205\270.json"
	modified:   wiki.html
	modified:   "wiki/\345\214\243\346\261\241\347\263\273.md"
	modified:   "wiki/\345\226\256\345\255\227/\360\254\202\244.md"
	modified:   "wiki/\345\226\256\350\251\236/\363\260\234\200\363\260\234\201\363\260\234\202.md"
	modified:   "\346\210\221\347\232\204\345\234\226\345\206\212.html"
	modified:   "\346\227\245\350\252\214.html"

--- a/404.html
+++ b/404.html
@@ -1,22 +1,82 @@
 <!DOCTYPE html>
 <html lang="zh">
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="height=device-height, initial-scale=1.0"
+        />
+        <title>尋无</title>
+        <script src="/javascript/公共/好多函數！.js"></script>
+        <link rel="icon" s-href="䈎面圖標：msg_error" type="image/x-icon" />
+        <link
+            rel="preload"
+            href="/fonts/只需HanaMinA.ttf"
+            as="font"
+            type="font/woff2"
+            crossorigin="anonymous"
+        />
+        <link
+            href="/css/功能.css"
+            rel="stylesheet"
+            type="text/css"
+            media="all"
+        />
+        <link
+            href="/css/滾動條/方滾動條.css"
+            rel="stylesheet"
+            type="text/css"
+            media="all"
+        />
+        <style>
+            @font-face {
+                font-family: "只需HanaMinA";
+                src: url("/fonts/只需HanaMinA.ttf") format("TrueType");
+                font-display: swap;
+            }
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="height=device-height, initial-scale=1.0">
-	<title>尋无</title>
-	<script src="/javascript/公共/好多函數！.js"></script>
-	<link rel="icon" s-href="䈎面圖標：msg_error" type="image/x-icon">
-	<link rel="preload" href="/fonts/只需HanaMinA.ttf" as="font" type="font/woff2" crossorigin="anonymous">
-	<link href="/css/功能.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/css/滾動條/黑灰白滾動條.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/css/404.css" rel="stylesheet" type="text/css" media="all">
-</head>
+            body *,
+            body {
+                font-family: "只需HanaMinA";
+            }
 
-<body class="unselectable">
-	<div class="大">尋无</div>
-	<br>
-	<div class="中">NOT-FOUND<a class="中" href="/">主䈎</a></div>
-</body>
+            body {
+                writing-mode: vertical-rl;
+                overflow: hidden;
+                color: white;
+                background-color: blue;
+            }
 
+            .大 {
+                font-size: 300px;
+                line-height: 300px;
+            }
+
+            .中 {
+                font-size: 50px;
+                line-height: 50px;
+            }
+
+            a {
+                -webkit-transition-duration: 0.3s;
+                transition-duration: 0.3s;
+                font-weight: bold;
+                color: #00ffff;
+                opacity: 30%;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: white;
+                background-color: black;
+                opacity: 100%;
+            }
+        </style>
+    </head>
+
+    <body class="unselectable">
+        <div class="大">尋无</div>
+        <br />
+        <div class="中">NOT-FOUND<a class="中" href="/">主䈎</a></div>
+    </body>
 </html>
