Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="height=device-height, initial-scale=0.9"
         />
-        <title>石顯法東的个人主䈎</title>
+        <title>灋顯東石的个人主䈎</title>
         <script src="/javascript/公共/好多函數！.js"></script>
         <script src="/javascript/公共/橫向捲動.js"></script>
         <script src="/javascript/index/index.js"></script>
@@ -78,7 +78,7 @@
                                 class="unselectable"
                                 style="float: left; width: 270px"
                             />
-                            <h2>石顯法東</h2>
+                            <h2>灋顯東石</h2>
                             <hr style="margin-left: 50px; margin-right: 10px" />
                             <p>是我的网絡昵稱。</p>
                             <p>這裏是我的个人网站</p>
@@ -131,9 +131,8 @@
                             <h3>愛好 :=&心=:</h3>
                             <ul>
                                 <li>
-                                    <b>吸</b>
                                     <b>漢字</b
-                                    >　來自世界的漢字：中國日本韓國漢字　<br />㗂越𡨸喃　𗼇𘝞　以及&#xf0700;&#xf0701;&#xf0702;
+                                    >　來自世界的漢字：中國日本韓國漢字　<br />㗂越𡨸喃　𗼇𘝞　以及
                                     <p>恩其實主要是前面純漢字吧（笑）</p>
                                 </li>
                                 <li>
@@ -159,10 +158,10 @@
                         </div>
                     </td>
                     <td id="下列">
-                        <div class="塊" id="Q1">
+                        <div class="塊 最近更新日期">
                             最近更新日期：<br />
-                            <span class="時間" id="GIT：今倉庫最近更新時間"
-                                ><script>
+                            <span class="時間" id="GIT：今倉庫最近更新時間">
+                                <script>
                                     function updateLatestGitUpdateTime() {
                                         const apiUrl =
                                             "https://api.github.com/repos/soizo/soizo.github.io";
@@ -190,10 +189,9 @@
                                                 );
                                             });
                                     }
-
                                     updateLatestGitUpdateTime();
-                                </script></span
-                            >
+                                </script>
+                            </span>
                         </div>
                     </td>
                 </tr>
