--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <td id="上列">
                         <div class="塊" id="个人紹介">
                             <img
-                                s-src="赤景靑面怒視目"
+                                s-src="素景靑面怒視目多目"
                                 class="unselectable"
                                 style="float: left; width: 270px"
                                 draggable="false"
