--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             class="「中國」 wiki"
                                             >中國</a
                                         ></b
-                                    >:=&CHINA-FLAG=: 人
+                                    >人:=&CHINA-FLAG=:
                                 </li>
                                 <li>
                                     <b>生辰</b>：<span class="時間"
