--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             href="/json/公共/私用字辭典.json"
             as="fetch"
             type="application/json"
+            crossorigin="anonymous"
         />
         <link
             rel="preload"
