修復手機端提示，還有body的margin

--- a/index.html
+++ b/index.html
@@ -74,60 +74,71 @@
                 <tr>
                     <td id="上列">
                         <div class="塊" id="个人紹介">
-                            <img
-                                s-src="素景靑面怒視目多目"
-                                class="unselectable"
-                                style="float: left; width: 237px"
-                                draggable="false"
-                            />
-                            <h2>灋顯東石</h2>
-                            <hr style="margin-left: 50px; margin-right: 10px" />
-                            <p>是我的网絡昵稱。</p>
-                            <p>這裏是我的个人网站</p>
-                            <span class="遮擋下" style="background-color: #000"
-                                >事實我早些時就啓始了<br />（但非index）</span
-                            >
-                            <p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
-                            <b class="時間"
-                                >:=四七二〇·二月十七·戌正一刻$扁=:</b
-                            >
-                            <h3>關於我</h3>
-                            <ul id="相關我列表" style="padding-right: 20px">
-                                <li>
-                                    我是<b
-                                        ><a
-                                            href="/wiki.html?title=中國"
+                            <div>
+                                <img
+                                    s-src="素景靑面怒視目多目"
+                                    class="unselectable"
+                                    style="float: left; width: 237px"
+                                    draggable="false"
+                                />
+                                <h2>灋顯東石</h2>
+                                <hr
+                                    style="
+                                        margin-left: 30px;
+                                        margin-right: 10px;
+                                    "
+                                />
+                                <p>是我的网絡昵稱。</p>
+                                <p>這裏是我的个人网站</p>
+                                <span
+                                    class="遮擋下"
+                                    style="background-color: #000"
+                                    >事實我早些時就啓始了<br />（但非index）</span
+                                >
+                                <p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
+                                <b class="時間"
+                                    >:=四七二〇·二月十七·戌正一刻$扁=:</b
+                                >
+                            </div>
+                            <div>
+                                <h3>關於我</h3>
+                                <ul id="相關我列表" style="padding-right: 20px">
+                                    <li>
+                                        我是<b
+                                            ><a
+                                                href="/wiki.html?title=中國"
+                                                target="_blank"
+                                                class="「中國」 wiki"
+                                                >中國</a
+                                            ></b
+                                        >人:=&CHINA-FLAG=:
+                                    </li>
+                                    <li>
+                                        <b>生辰</b>：<span class="時間"
+                                            >:=四七〇五·八月初九$扁=:</span
+                                        >
+                                    </li>
+                                    <li><b>男性</b>　性取向不明確</li>
+                                    <li>
+                                        尊重多元性傾向　認同只<a
+                                            class="wiki"
                                             target="_blank"
-                                            class="「中國」 wiki"
-                                            >中國</a
-                                        ></b
-                                    >人:=&CHINA-FLAG=:
-                                </li>
-                                <li>
-                                    <b>生辰</b>：<span class="時間"
-                                        >:=四七〇五·八月初九$扁=:</span
-                                    >
-                                </li>
-                                <li><b>男性</b>　性取向不明確</li>
-                                <li>
-                                    尊重多元性傾向　認同只<a
-                                        class="wiki"
-                                        target="_blank"
-                                        href="/wiki.html?title=性別四元論"
-                                        >性別四元論</a
-                                    >
-                                </li>
-                                <li>
-                                    <b>編程語言 :=&CODE=:</b
-                                    ><br />學得很雜　譬如<a
-                                        href="https://scratch.mit.edu/download"
-                                        target="_blank"
-                                        >SCRATCH</a
-                                    ><span>, </span><a>C++</a><span>, </span
-                                    ><a>GDscript</a
-                                    >都學過（或學校或自學）其餘主流語言都有了解或可讀
-                                </li>
-                            </ul>
+                                            href="/wiki.html?title=性別四元論"
+                                            >性別四元論</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <b>編程語言 :=&CODE=:</b
+                                        ><br />學得很雜　譬如<a
+                                            href="https://scratch.mit.edu/download"
+                                            target="_blank"
+                                            >SCRATCH</a
+                                        ><span>, </span><a>C++</a><span>, </span
+                                        ><a>GDscript</a
+                                        >都學過（或學校或自學）其餘主流語言都有了解或可讀
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="塊" id="愛好">
                             <h3>愛好 :=&心=:</h3>
