--- a/index.html
+++ b/index.html
@@ -55,20 +55,6 @@
         />
     </head>
     <body class="prompt-list-group-content">
-        <center draggable="false">
-            <img
-                id="文者燒殺人"
-                class="unselectable"
-                s-src="文者燒殺人"
-                draggable="false"
-                style="
-                    margin-left: 20px;
-                    width: 200px;
-                    image-rendering: pixelated;
-                    margin-right: -10px;
-                "
-            />
-        </center>
         <table>
             <tbody>
                 <tr>
@@ -78,26 +64,40 @@
                                 <img
                                     s-src="素景靑面怒視目多目"
                                     class="unselectable"
-                                    style="float: left; width: 237px"
+                                    style="float: left; width: 230px"
                                     draggable="false"
                                 />
-                                <h2>灋顯東石</h2>
-                                <hr
+                                <img
+                                    id="文者燒殺人"
+                                    class="unselectable"
+                                    s-src="文者燒殺人"
+                                    draggable="false"
                                     style="
-                                        margin-left: 30px;
-                                        margin-right: 10px;
+                                        width: 130px;
+                                        image-rendering: pixelated;
+                                        margin-right: -10px;
                                     "
                                 />
-                                <p>是我的网絡昵稱。</p>
+                                <p>
+                                    我是<span
+                                        style="
+                                            font-family: 只需HanaMinA;
+                                            font-weight: bold;
+                                            font-size: 40px;
+                                        "
+                                        >灋顯東石</span
+                                    >
+                                </p>
                                 <p>這裏是我的个人网站</p>
+                                <span>啓始日：</span
+                                ><span class="時間" style="font-weight: bold"
+                                    >:=四七二〇·二月十七·戌正一刻$扁=:</span
+                                >
+                                <br />
                                 <span
                                     class="遮擋下"
                                     style="background-color: #000"
-                                    >事實我早些時就啓始了<br />（但非index）</span
-                                >
-                                <p>我仍決定卽日卽:=今$0=:乍爲啓始日：</p>
-                                <b class="時間"
-                                    >:=四七二〇·二月十七·戌正一刻$扁=:</b
+                                    >事實我早些時就啓始了，在乍日誌</span
                                 >
                             </div>
                             <div>
