index，和一些位置的變動

--- a/index.html
+++ b/index.html
@@ -115,10 +115,27 @@
                                     </li>
                                     <li>
                                         <b>生辰</b>：<span class="時間"
-                                            >:=四七〇五·八月初九$扁=:</span
+                                            >:=四七〇五·八月$扁=:</span
                                         >
                                     </li>
                                     <li><b>男性</b>　性取向不明確</li>
+                                    <li>
+                                        <b>ＭＢＴＩ</b>人格爲Ｔ類<a
+                                            target="_blank"
+                                            href="https://www.16personalities.com/tw/infp-%E6%80%A7%E6%A0%BC"
+                                            >調停者</a
+                                        ><a s-href="MBTI：INFP-T" onclick="小丑音效()"target="_blank" style="background:none;">
+											<audio id="小丑">
+											<source src="assets/音頻/音效/小丑.mp3" type="audio/mp3">
+											</audio>
+											<script>
+												function 小丑音效() {
+													var audio = document.getElementById("小丑");
+													audio.play();
+												}
+											</script>
+										<img s-src="MBTI：INFP-T" style="width: 2em; float: up;"></img></a>
+                                    </li>
                                     <li>
                                         尊重多元性傾向　認同只<a
                                             class="wiki"
